@@ -362,6 +362,7 @@ because of Phabricator reports.
   made private.
 * The Skin::setupSkinUserCss method deprecated in 1.32, was removed. Please use
   skin registration instead.
+* ParserCache::getKey and ::getEtag, deprecated since 1.36, were removed.
 * …
 
 === Deprecations in 1.37 ===
